<resources>
    <string name="app_name">ServiAgro</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="registrer_user">Registro de usuario</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="register_config">Registrar Configuración</string>
    <string name="previous">Previous</string>

    <string name="welcome_config">Empecemos a configurar tu explotacion...</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="web_client_id">Gn9c4wj5ORWoBp2MduNQexcb</string>

    <string name="menu_actividad">Actividades</string>
    <string name="menu_calendario">Calendarios</string>
    <string name="menu_madurez">Proceso de madurez</string>
    <string name="menu_settings">Configuracion</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="details_fragment">Configuracion de cultivo</string>
    <string name="menu_conf_add_actividad">Agregar Actividad</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_conf_update_cintas">Actualizar cintas</string>
    <string name="menu_reportes">Reportes</string>
</resources>